remove test dependencies from pom